commit by anurag

--- a/courses.html
+++ b/courses.html
@@ -80,10 +80,9 @@
     <!--side-bar section ends-->
     <!--course section starts-->
     <section class="course">
-        <div class="back-option-btn">
-            <h1>Our Courses</h1>    
-            <a href="home.html" class="back-btn">back</a>
-        </div>
+        <h1 class="heading">
+            Our Courses 
+        </h1>  
         
         <div class="box-container">
             
