--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
-            <div class="box hidden">
+            <div class="box">
                 <div class="tutor">
                     <img src="./images/teacherpic01.png" alt="">
                     <div>
@@ -183,7 +183,7 @@
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
-            <div class="box hidden">
+            <div class="box">
                 <div class="tutor">
                     <img src="./images/teacherpic01.png" alt="">
                     <div>
@@ -196,7 +196,7 @@
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
 
-            <div class="box hidden">
+            <div class="box">
                 <div class="tutor">
                     <img src="./images/teacherpic01.png" alt="">
                     <div>
@@ -208,89 +208,12 @@
                 <h3 class="title">React Tutorial</h3>
                 <a href="playlist.html" class="inline-btn">view playlist</a>
             </div>
-            
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/mySQLthumbnail.jpg" class="thumb" alt="">
-                <h3 class="title">MySQL Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
-            
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/phpthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">PHP Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
-
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/Cthumbnail.webp" class="thumb" alt="">
-                <h3 class="title">C Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
-
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/c++thumbnail.png" class="thumb" alt="">
-                <h3 class="title">C++ Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
-
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/pythonthumbnail.png" class="thumb" alt="">
-                <h3 class="title">Python Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
-
-            <div class="box hidden">
-                <div class="tutor">
-                    <img src="./images/teacherpic01.png" alt="">
-                    <div>
-                        <h3>Teacher name1</h3>
-                        <span>21-25-2024</span>
-                    </div>
-                </div>
-                <img src="./images/javathumbnail.avif" class="thumb" alt="">
-                <h3 class="title">Java Tutorial</h3>
-                <a href="playlist.html" class="inline-btn">view playlist</a>
-            </div>
         </div>
         <div class="more-btn">
             <a href="courses.html" class="inline-option-btn">view more</a>
         </div>
     </section>
+    <!--course section ends-->
 
 
 
