--- a/teachers.html
+++ b/teachers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teachers</title>
+    <title>TechNewbies</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!--header section starts-->
     <header class="header">
         <section class="flex">
 
@@ -44,6 +45,8 @@
             </div>
         </section>
     </header>
+    <!--header section ends-->
+    <!--side-bar section ends-->
     <div class="side-bar">
         <div class="close-side-bar">
             <i class="fas fa-times"></i>
@@ -74,13 +77,8 @@
                 </ul>
         </div>
     </div>
-
-
-
-
-
-
-
+    <!--side-bar section ends-->
+    
 <script src="./script.js"></script>
 </body>
 </html>
