--- a/watch-video.html
+++ b/watch-video.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>TechNewbies</title>
-=======
-    <title>Watch</title>
->>>>>>> 01009ceeac4257b3d5ea069c0e90402c66fc5012
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +14,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <!--header section starts-->
-=======
->>>>>>> 01009ceeac4257b3d5ea069c0e90402c66fc5012
     <header class="header">
         <section class="flex">
 
@@ -52,13 +45,9 @@
             </div>
         </section>
     </header>
-<<<<<<< HEAD
     <!--header section ends-->
     <!--side-bar section ends-->
-    <section class="side-bar">
-=======
     <div class="side-bar">
->>>>>>> 01009ceeac4257b3d5ea069c0e90402c66fc5012
         <div class="close-side-bar">
             <i class="fas fa-times"></i>
         </div>
@@ -69,41 +58,18 @@
             <a href="profile.html" class="btn">view profile</a>
         </div>
         <div class="nav-bar">
-<<<<<<< HEAD
-                <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-        </div>
-    </section>
-    <!--side-bar section ends-->
-    <!--watch video section starts-->
-    
-    <!--watch video section starts-->
-=======
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
+            <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
+            <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
+            <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+            <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+            <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
         </div>
     </div>
+    <!--side-bar section ends-->
+    <!--quick section starts-->
+    
 
 
->>>>>>> 01009ceeac4257b3d5ea069c0e90402c66fc5012
 
 
 
