commit by anurag

--- a/watch-video.html
+++ b/watch-video.html
@@ -58,16 +58,15 @@
             <a href="profile.html" class="btn">view profile</a>
         </div>
         <div class="nav-bar">
-            <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-            <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-            <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-            <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-            <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
+            <a href="home.html"><i class="fas fa-home"><span>Home</span></a>
+            <a href="about.html"><i class="fas fa-home"><span>About us</span></a>
+            <a href="courses.html"><i class="fas fa-home"><span>Courses</span></a>
+            <a href="teachers.html"><i class="fas fa-home"><span>Teachers</span></a>
+            <a href="contact.html"><i class="fas fa-home"><span>Contact us</span></a>
         </div>
     </div>
     <!--side-bar section ends-->
-    <!--quick section starts-->
-    
+
 
 
 
