--- a/courses.html
+++ b/courses.html
@@ -58,31 +58,11 @@
             <a href="profile.html" class="btn">view profile</a>
         </div>
         <div class="nav-bar">
-<<<<<<< HEAD
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span><
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-=======
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
->>>>>>> 01009ceeac4257b3d5ea069c0e90402c66fc5012
+            <a href="home.html"><i class="fas fa-home"><span>Home</span></a>
+            <a href="about.html"><i class="fas fa-home"><span>About us</span></a>
+            <a href="courses.html"><i class="fas fa-home"><span>Courses</span></a>
+            <a href="teachers.html"><i class="fas fa-home"><span>Teachers</span></a>
+            <a href="contact.html"><i class="fas fa-home"><span>Contact us</span></a>
         </div>
     </div>
     <!--side-bar section ends-->
