commit by anurag

--- a/teachers.html
+++ b/teachers.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!--header section starts-->
-    <header class="header">
+    <section class="header">
         <section class="flex">
 
             <a href="home.html" class="logo">TechNewbies</a>
@@ -58,25 +58,14 @@
             <a href="profile.html" class="btn">view profile</a>
         </div>
         <div class="nav-bar">
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
+          <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>  
+          <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
+          <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+          <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+          <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
         </div>
     </div>
+  </section>
     <!--side-bar section ends-->
     
 <script src="./script.js"></script>
