--- a/watch-video.html
+++ b/watch-video.html
@@ -66,6 +66,13 @@
         </div>
     </div>
     <!--side-bar section ends-->
+    <!--watch video section starts-->
+    <div class="watch-video">
+        <div class="video-details">
+            <video src="https://youtu.be/it1rTvBcfRg" class="video"></video>
+        </div>
+    </div>
+    <!--watch video section ends-->
 
 
 
