commit by anurag

--- a/teacher_profile.html
+++ b/teacher_profile.html
@@ -60,25 +60,75 @@
         <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
         <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
         <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-        <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+        <a href="teachers_profile.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
         <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
       </div>
   </section>
   <!--sider bar menu ends-->
-  <!--teachers menu starts-->
-  <section class="teachers">
-    
-    <h1 class="heading">expert tutors</h1>
+  <!--teachers profile section starts-->
+  <section class="tutor-profile">
+    <h1 class="heading">Profile details</h1>
 
-    <form action="" class="search-tutor">
-      <input type="text" name="search_box" max="100" placeholder="search tutor..." required>
-      <button type="submit" name="search-tutor" class="fas fa-search"></button>
-    </form>
+    <div class="details">
+      <div class="tutor">
+        <img src="./images/teacherpic01.png" alt="">
+        <h3>John Doe</h3>
+        <span>developer</span>
+      </div>
+      <div class="flex">
+        <p>total playlists : <span>6</span></p>
+        <p>total videos : <span>28</span></p>
+        <p>total likes : <span>1208</span></p>
+        <p>total comments : <span>52</span></p>
+      </div>
+    </div>
   </section>
-  <!--teachers menu ends-->
+  <!--teachers profile section ends-->
+  <!--course section starts-->
+  <section class="course">
+    <h1 class="heading">
+        Our Courses 
+    </h1>  
 
+    <div class="box-container">
 
+        <div class="box">
+            <img src="./images/HTMLthumbnail.png" class="thumb" alt="">
+            <h3 class="title">HTML Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
 
+        <div class="box">
+            <img src="./images/CSSthumbnail.png" class="thumb" alt="">
+            <h3 class="title">CSS Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
+
+        <div class="box">
+            <img src="./images/JSthubnail.jpeg" class="thumb" alt="">
+            <h3 class="title">JavaScript Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
+
+        <div class="box">
+            <img src="./images/BootStrapthubnail.png" class="thumb" alt="">
+            <h3 class="title">Bootstrap Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
+
+        <div class="box">
+            <img src="./images/jQuerythubnail.png" class="thumb" alt="">
+            <h3 class="title">jQuery Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
+
+        <div class="box">
+            <img src="./images/Reactthumbnail.webp" class="thumb" alt="">
+            <h3 class="title">React Tutorial</h3>
+            <a href="playlist.html" class="inline-btn">view playlist</a>
+        </div>
+    </div>
+</section>
 
 
 
