--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Tutor's profile</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,70 +14,77 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header class="header">
-        <section class="flex">
+  <header class="header">
+  <!--sider bar menu ends-->
+  <section class="flex">
+    <a href="home.html" class="logo">TechNewbies</a>
+          
+      <form action="" method="post" class="search-form">
+          <input type="text" name="search_box" placeholder="search courses..."
+          required maxlength="100">
+          <button type="submit" class="fas fa-search" name="search_box"></button>
+      </form>
 
-            <a href="home.html" class="logo">TechNewbies</a>
-            
-            <form action="" method="post" class="search-form">
-                <input type="text" name="search_box" placeholder="search courses..."
-                required maxlength="100">
-                <button type="submit" class="fas fa-search" name="search_box"></button>
-            </form>
+      <div class="icons">
+          <div id="menu-btn" class="fas fa-bars"></div>
+          <div id="search-btn" class='fas fa-search'></div>
+          <div id="user-btn" class="fas fa-user"></div>
+          <div id="toggle-btn" class="fas fa-sun"></div>
+      </div>
 
-            <div class="icons">
-                <div id="menu-btn" class="fas fa-bars"></div>
-                <div id="search-btn" class='fas fa-search'></div>
-                <div id="user-btn" class="fas fa-user"></div>
-                <div id="toggle-btn" class="fas fa-sun"></div>
-            </div>
+      <div class="profile">
+          <img src="./images/profilepic01.png" alt="profile pic" height="100px">
+          <h3>Anurag Pardeshi</h3>
+          <span>student</span>
+          <a href="profile.html" class="btn">view profile</a>
+          <div class="flex-btn">
+            <a href="login.html" class="option-btn">login</a>
+            <a href="register.html" class="option-btn">register</a>
+          </div>
+      </div>
+  </section>
+  </header>
+  <!--sider bar menu ends-->
+  <!--sider bar menu starts-->
+  <section class="side-bar">
+      <div class="close-side-bar">
+          <i class="fas fa-times"></i>
+      </div>
+      <div class="profile">
+          <img src="./images/profilepic01.png" alt="profile pic" height="100px">
+          <h3>Anurag Pardeshi</h3>
+          <span>student</span>
+          <a href="profile.html" class="btn">view profile</a>
+      </div>
+      <div class="nav-bar">
+        <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
+        <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
+        <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+        <a href="teachers_profile.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+        <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
+      </div>
+  </section>
+  <!--sider bar menu ends-->
+  <!--contact section starts-->
+  <section class="contact">
 
-            <div class="profile">
-                <img src="./images/profilepic01.png" alt="profile pic" height="100px">
-                <h3>Anurag Pardeshi</h3>
-                <span>student</span>
-                <a href="profile.html" class="btn">view profile</a>
-                <div class="flex-btn">
-                    <a href="login.html" class="option-btn">login</a>
-                    <a href="register.html" class="option-btn">register</a>
-                </div>
-            </div>
-        </section>
-    </header>
-    <div class="side-bar">
-        <div class="close-side-bar">
-            <i class="fas fa-times"></i>
-        </div>
-        <div class="profile">
-            <img src="./images/profilepic01.png" alt="profile pic" height="100px">
-            <h3>Anurag Pardeshi</h3>
-            <span>student</span>
-            <a href="profile.html" class="btn">view profile</a>
-        </div>
-        <div class="nav-bar">
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
-        </div>
+    <div class="row">
+
+      <div class="image">
+        <img src="./images/contactUsimg.png" alt="">
+      </div>
+
+      <form action="" method="post">
+        <h3>get in touch</h3>
+        <input type="text" placeholder="enter your name" required maxlength="100" name="name" class="box">
+        <input type="email" placeholder="enter your email" required maxlength="100" name="email" class="box">
+        <input type="number" placeholder="enter your number" required maxlength="100" name="number" class="box">
+        <textarea name="msg" id="" class="box" placeholder="enter your message" required cols="30" rows="10"></textarea>
+        <input type="submit" value="send message" class="inline-btn" name="submit">
+      </form>
     </div>
-
-
-
-
+  </section>
+  <!--contact section ends-->
 
 
 
