--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,30 @@
         <input type="submit" value="send message" class="inline-btn" name="submit">
       </form>
     </div>
+
+    <div class="box-container">
+      <div class="box">
+        <i class="fas fa-phone"></i>
+        <h3>Phone number</h3>
+        <a href="tel:1234567890">+91 9876543210</a>
+        <a href="tel:1234565432">+91 9876543210</a>
+      </div>
+    
+
+      <div class="box">
+        <i class="fas fa-envelope"></i>
+        <h3>email address</h3>
+        <a href="mailto: pardeshianurag22@gmail.com">pardeshianurag22@gmail.com</a>
+        <a href="mailto: anuragpardeshi2001@gmail.com">anuragpardeshi2001@gmail.com</a>
+      </div>
+
+      <div class="box">
+        <i class="fa-solid fa-location-dot"></i>
+        <h3>Office address</h3>
+        <a href="#">Sage University, Indore</a>
+      </div>
+    </div>
+
   </section>
   <!--contact section ends-->
 
