--- a/contact.html
+++ b/contact.html
@@ -89,6 +89,7 @@
         <i class="fas fa-phone"></i>
         <h3>Phone number</h3>
         <a href="tel:1234567890">+91 9876543210</a>
+        
         <a href="tel:1234565432">+91 9876543210</a>
       </div>
     
@@ -97,13 +98,14 @@
         <i class="fas fa-envelope"></i>
         <h3>email address</h3>
         <a href="mailto: pardeshianurag22@gmail.com">pardeshianurag22@gmail.com</a>
+
         <a href="mailto: anuragpardeshi2001@gmail.com">anuragpardeshi2001@gmail.com</a>
       </div>
 
       <div class="box">
         <i class="fa-solid fa-location-dot"></i>
         <h3>Office address</h3>
-        <a href="#">Sage University, Indore</a>
+        <a href="#">Kailod Kartal, By-Pass Road, Indore, Madhya Pradesh</a>
       </div>
     </div>
 
