--- a/update.html
+++ b/update.html
@@ -72,15 +72,16 @@
       <p>Your name</p>
       <input type="text" name="name" placeholder="Anurag Pardeshi" maxlength="100" class="box">
       <p>Your email</p>
-      <input type="text" name="email" placeholder="pardeshianurag22@gmail.com" maxlength="100" class="box">
+      <input type="email" name="email" placeholder="pardeshianurag22@gmail.com" maxlength="100" class="box">
       <p>Old password</p>
-      <input type="text" name="old_pass" placeholder="Enter your old pasword..." maxlength="100" class="box">
+      <input type="password" name="old_pass" placeholder="Enter your old pasword..." maxlength="100" class="box">
       <p>New password</p>
-      <input type="text" name="new_pass" placeholder="Enter your new pasword..." maxlength="100" class="box">
+      <input type="password" name="new_pass" placeholder="Enter your new pasword..." maxlength="100" class="box">
       <p>Confirm password</p>
-      <input type="text" name="c_pass" placeholder="Confirm your new pasword" maxlength="100" class="box">
+      <input type="password" name="c_pass" placeholder="Confirm your new pasword" maxlength="100" class="box">
       <p>Update photo</p>
       <input type="file" name="image" accept="image/*" class="box">
+      <input type="submit" name="submit" value="update profile" class="btn">
 
     </form>
   </section>
