--- a/teachers.html
+++ b/teachers.html
@@ -94,7 +94,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
 
       <div class="box">
@@ -108,7 +108,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
 
       <div class="box">
@@ -122,7 +122,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
 
       <div class="box">
@@ -136,7 +136,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
 
       <div class="box">
@@ -150,7 +150,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
 
       <div class="box">
@@ -164,7 +164,7 @@
         <p>playlists : <span>4</span></p>
         <p>total videos : <span>18</span></p>
         <p>total likes : <span>1208</span></p>
-        <a href="teachers.html" class="inline-btn">view profile</a>
+        <a href="teacher_profile.html" class="inline-btn">view profile</a>
       </div>
     </div>
 
