commit by anurag

--- a/about.html
+++ b/about.html
@@ -46,38 +46,26 @@
         </section>
     </header>
     <!--header section ends-->
-    <!--side-bar section ends-->
-    <div class="side-bar">
-        <div class="close-side-bar">
-            <i class="fas fa-times"></i>
-        </div>
-        <div class="profile">
-            <img src="./images/profilepic01.png" alt="profile pic" height="100px">
-            <h3>Anurag Pardeshi</h3>
-            <span>student</span>
-            <a href="profile.html" class="btn">view profile</a>
-        </div>
-        <div class="nav-bar">
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
-        </div>
+      <!--sider bar menu starts-->
+<section class="side-bar">
+    <div class="close-side-bar">
+        <i class="fas fa-times"></i>
     </div>
-    <!--side-bar section ends-->
+    <div class="profile">
+        <img src="./images/profilepic01.png" alt="profile pic" height="100px">
+        <h3>Anurag Pardeshi</h3>
+        <span>student</span>
+        <a href="profile.html" class="btn">view profile</a>
+    </div>
+    <div class="nav-bar">
+      <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
+      <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
+      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+      <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
+    </div>
+</section>
+<!--sider bar menu ends-->
     <!--about section starts-->
     <section class="about">    
             <a href="home.html" class="back-btn" style="justify-content: end;">back</a>
