--- a/home.html
+++ b/home.html
@@ -46,10 +46,10 @@
         </section>
     </header>
     <!--header section ends-->
-    <!--side-bar section ends-->
-    <div class="side-bar">
+  <!--sider bar menu starts-->
+  <section class="side-bar">
         <div class="close-side-bar">
-            <i class="fas fa-times"></i>
+         <i class="fas fa-times"></i>
         </div>
         <div class="profile">
             <img src="./images/profilepic01.png" alt="profile pic" height="100px">
@@ -58,26 +58,14 @@
             <a href="profile.html" class="btn">view profile</a>
         </div>
         <div class="nav-bar">
-                <ul>
-                  <li>
-                    <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
-                  </li>
-                  <li>
-                    <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
-                  </li>
-                  <li>
-                    <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
-                  </li>
-                  <li>
-                    <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
-                  </li>
-                  <li>
-                    <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
-                  </li>
-                </ul>
+          <a href="home.html"><i class="fas fa-home"></i><span> Home</span></a>
+          <a href="about.html"><i class="fas fa-question"></i><span>&nbsp;  About us</span></a>
+          <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>Courses</span></a>
+          <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Teachers</span></a>
+            <a href="contact.html"><i class="fas fa-headset"></i><span> Contact us</span></a>
         </div>
-    </div>
-    <!--side-bar section ends-->
+    </section>
+    <!--sider bar menu ends-->
     <!--quick section starts-->
     <section class="quick-selection">
         <h1 class="heading">quick options</h1>
